@@ -18,6 +18,9 @@ Features and improvements:
   tasks, including detach, yield, taskwait depend, taskloops and
   cancelled tasks. Support for OpenMP reduction clauses. Support for
   implementation-based barriers generated by the OpenMP runtime.
+- In BFD-based addr2line lookup, ignore `ld-linux[x].so` whose search
+  address ranges have been reported to overlap with those of
+  runtime-loaded libraries.
 
 User tools and API improvements and changes:
 
